--- a/styl/page.styl
+++ b/styl/page.styl
@@ -1,7 +1,7 @@
 @import 'jeet'
 @import 'nib'
 @import 'rupture'
-@import '../../../Blossom/styl/src/variables'
+@import '../node_modules/blossom-ui/styl/src/variables'
 
 #app
 	width 100%
@@ -49,7 +49,7 @@
 			margin-left .8em
 
 .icons
-	background url('../examples/icons.jpg') repeat
+	background url('../public/examples/icons.jpg') repeat
 	background-size cover
 	cf()
 	height 482px
