--- a/styl/page.styl
+++ b/styl/page.styl
@@ -1,7 +1,7 @@
 @import 'jeet'
 @import 'nib'
 @import 'rupture'
-@import '../node_modules/blossom-ui/styl/src/variables'
+@import 'src/variables'
 
 #app
 	width 100%
@@ -10,6 +10,20 @@
 	& > div
 		width 100%
 		height 100%
+
+.circular
+	border-radius 50%
+	width 2.2em
+	height 2.2em
+	line-height 1em
+	text-align center
+
+.squared
+	border-radius 0 !important
+	text-align center
+
+.main-content, pre
+	background-color #f9fbfc !important
 
 .main-content
 	&:before
@@ -25,8 +39,9 @@
 	width 100%
 	.page
 		font-size 1em
-		span(1/1)
 		padding-bottom 110px
+		margin 0 15px
+		cf()
 
 .hero
 	text-align center
@@ -34,17 +49,18 @@
 	relative top left
 	min-height 100%
 	height 100%
-	background-color #fff
 	width 100%
-	border-bottom 1px solid border-gray
 	h1
-		margin-top .3em
-		font-weight 600
+		margin-bottom -.5rem
+		font-weight 800
+		font-size 4.2rem
 	h3
-		margin .3em 0
 		font-weight 300
+		color color-light-grey
 	.button-group
-		margin-top 2em
+		margin-top 1.6em
+		i
+			line-height 3rem
 		.button + .button
 			margin-left .8em
 
@@ -96,15 +112,14 @@ section.about, section.size
 	overflow hidden
 	h3
 		margin 0 0 0.6em 0
-		line-height 1.2em
 	p
-		color text-lighter-grey
-		font-size 1.15em
+		color color-light-grey
+		font-size 1rem
 		line-height 1.7em
 
 .features
 	cf()
-	border-top 1px solid border-gray
+	background-color #fff
 	.row
 		display flex
 		position relative
@@ -113,7 +128,7 @@ section.about, section.size
 		align-items stretch
 
 .about
-	border-bottom 1px solid #dfe4e9
+	background-color #fff
 	img
 		height 18em
 		bottom -.4em
@@ -138,7 +153,7 @@ section.about, section.size
 .grid
 	cf()
 	padding 4em 0
-	background-color background-lightest-gray
+	background-color background-lightest-grey
 
 .column
 	display flex
@@ -147,14 +162,14 @@ section.about, section.size
 	margin 3.4em 0
 	padding 0 2em
 	& + .column
-		border-left 1px solid border-gray
+		border-left 1px solid border-grey
 	h4
 		font-weight 400
 		margin 0 0 .6em 0
 	p
 		flex 1 0 auto
 		margin 0 0 1.4em 0
-		color text-lighter-grey
+		color color-light-grey
 	.fa
 		font-size 2.2em
 		margin 0 0 .6em 0
@@ -201,7 +216,7 @@ section.about, section.size
 	content ''
 
 .opening-message
-	margin -1.9em 0 1.8em 0
+	margin-top -1.9em
 
 .message + .module.collapsed
 	margin-top 1em
@@ -220,20 +235,25 @@ section.about, section.size
 	position relative
 	.view-source
 		color text-grey
-		display none
 		cursor pointer
 		font-size 1.1em
 		absolute top right
+		opacity .4
 		&:hover
 			color color-primary
 			opacity 1
-	h6
-		font-size 1.2em
-	p
-		color text-lighter-grey
-		margin .5em 0 0 0
+	& + small
+		margin-top 4rem
+	small
 		display block
-		line-height 1.4em
+		color color-pink
+	h6
+		font-size 1.2rem
+		font-weight 600
+	p
+		color color-light-grey
+		margin .1rem 0 0 0
+		display block
 		& + p
 			margin .4em 0 0 0
 
@@ -251,28 +271,29 @@ section.about, section.size
 			margin .8em 0 0 0
 			font-weight 300
 		& + .antiScroll
-			border-top 1px solid border-gray
+			border-top 1px solid border-grey
 .example
+	padding 1rem 0
 	&:hover
 		.view-source
 			display block !important
 	& + .example
-		margin-top 40px
-		padding-top 40px
-		border-top 1px solid border-gray
-	.grid-row
+		margin-top 1rem
+	.row
 		> *
-			margin 6px 0
+			margin-top 6px
+			margin-bottom 6px
 	&.menus
 		.note
 			margin 2em 0 0 0
-			color text-lighter-grey
+			color color-light-grey
 		.note + .menu
 			margin 2em 0 0 0
 	&.types
 		.progress + .progress
 			margin-top 14px
 	&.dropdowns
+		overflow visible
 		.stack + .stack
 			margin-top 14px
 	.message
@@ -282,24 +303,24 @@ section.about, section.size
 			margin-left 1em
 	&.animations
 		.group
-			border 1px solid border-gray
+			border 1px solid border-grey
 			span(1/1)
 			border-radius border-radius-normal
 	.animation
 		display inline-block
-		padding 1.4em 1.4em 3.45em 1.4em
+		padding 1.4em 1.4em 4.2em 1.4em
 		position relative
 		overflow hidden
 		span(1/3)
 		& + .animation
-			border-left 1px solid border-gray
+			border-left 1px solid border-grey
 		&:nth-child(4n)
 			border-left 0
-			border-top 1px solid border-gray
+			border-top 1px solid border-grey
 		&:nth-child(5n)
-			border-top 1px solid border-gray
+			border-top 1px solid border-grey
 		&:nth-child(6n)
-			border-top 1px solid border-gray
+			border-top 1px solid border-grey
 		code
 			absolute bottom left
 			width 100%
@@ -307,7 +328,7 @@ section.about, section.size
 			padding .7em 0
 			text-align center
 			margin 0
-			color text-lighter-grey
+			color color-light-grey
 			background-color light-color-smoke
 			font-size .875em
 			border-radius 0
@@ -350,7 +371,7 @@ section.about, section.size
 				padding .7em
 	&.stages
 		margin-top 20px
-	&.images > [class^='image-']
+	&.images .module > [class^='image-']
 		& + span
 			margin-left 9px
 	&.labels
@@ -379,6 +400,8 @@ section.about, section.size
 	display inline-flex
 	flex-direction row
 	align-items flex-start
+	width 100%
+	cf()
 	&.dark
 		.scheme
 			color text-grey
@@ -397,10 +420,10 @@ section.about, section.size
 		align-items stretch
 		width 180px
 		p
+			font-weight 500
 			display block
 			span(1/1)
 		span
-			opacity .7
 			margin 4px 0 0 0
 			text-transform uppercase
 		&:first-child
@@ -409,8 +432,7 @@ section.about, section.size
 			border-radius 0 border-radius-normal border-radius-normal 0
 
 .breakpoints .module
-	p
-		& + p
+	p + p
 			margin-top 8px
 
 .module
@@ -420,15 +442,17 @@ section.about, section.size
 		box-shadow none !important
 		padding 0
 		margin 0
+		background-color transparent
 		.footer:not(.content)
 			display none
 	.footer
+		span(1/1)
 		pre
-			background-color light-color-smoke
+			background-color #fff
 			margin 1em -1.3em -1.3em -1.3em
 			border-radius 0 0 border-radius-normal border-radius-normal
 			padding 0
-			border-top 1px solid border-gray
+			border-top 1px solid border-grey
 			tab-size 4
 			overflow auto
 		code
@@ -438,7 +462,6 @@ section.about, section.size
 
 .sidebar.top, .subbar
 	background-color white
-	border-bottom 1px solid border-gray
 	padding 24px 0 22px 0
 	z-index 2300
 	.logo, .sub
@@ -448,6 +471,7 @@ section.about, section.size
 		img
 			max-height 24px
 			absolute top -5px
+			width 84px
 		p
 			color #fff
 			margin 0
@@ -460,15 +484,17 @@ section.about, section.size
 			vertical-align top
 		li
 			& + li
-				margin-left 23px
+				margin-left 2.4rem
 			a
-				color text-grey
-				opacity 0.55
+				color link-light
+				font-weight 500
 				cursor pointer
 				&:hover
-					opacity 0.7
+					color link-light-hover
+					opacity 1
 			&.active
 				a
+					color color-primary
 					opacity 1
 
 .subbar
@@ -496,8 +522,9 @@ section.about, section.size
 				margin-right 4px
 
 aside.sidebar
-	absolute left 1em
+	absolute right 170px
 	float right
+	cf()
 	.fixed
 		width 30%
 		max-width 170px
@@ -509,54 +536,54 @@ aside.sidebar
 
 	h6
 		margin 0 0 .5em 0
+		font-weight 600
+		font-size 1.14rem
 	li
-		padding .4em 0
+		padding .6em 0
 		display block
 		&.active
 			a
 				color color-primary
 				opacity 1
+				font-weight 700
 		a
-			color text-grey
-			opacity .6
+			color link-light
+			font-weight 500
+			&:hover
+				color link-light-hover
+				opacity 1
 
 .sidebar
 	& + .page
-		padding-left 210px
+		padding-right 210px
 		+below('m')
-			padding-left 0
+			padding-right 0
 
 .outer-title
-	span(1/1)
-	border-bottom 1px solid border-gray
-	padding-bottom 28px
-	margin-bottom 40px
-	h4
-		font-weight 400
+	margin-bottom 1.8rem
+	border-bottom 1px solid border-grey
+	padding-bottom 1.4rem
+	h3
+		font-weight 700
 	p
-		color text-lighter-grey
-		margin-top 11px
+		color color-light-grey
+		font-size 1.06rem
 
 footer.footer
 	margin-top 2em
 	span(1/1)
-	absolute bottom 1em left
+	absolute bottom left
+	background-color #fff
 	.madeby a
 		&:hover
-			color dark-color-grey
-	.aotik
-		position relative
-		display inline-block
-		&:after
-			content ''
-			border-bottom 1px dashed color-grey
-			display block
+			color #e1476a
+	.cindr
+		color #e1476a
 	& .inner
-		padding 1em 0
-		border-top 1px solid border-gray
+		padding 2em 0
 		.links
 			li a
-				font-size .9em
+				font-size .86rem
 
 .wrap
 	& + footer.footer
