--- a/styl/modules/code.styl
+++ b/styl/modules/code.styl
@@ -1,5 +1,5 @@
 code
-	background-color background-light-grey
+	background-color lighten(background-light-grey, 50%)
 	color color-pink
 	padding .3rem .5rem
 	border-radius border-radius-normal
@@ -7,6 +7,12 @@ code
 	line-height 1.4rem
 	font-size .8rem
 	font-weight 500
+
+pre
+	background-color lighten(background-light-grey, 50%)
+	padding .3rem .5rem
+	code
+		padding 0
 
 p
 	code
