--- a/styl/page.styl
+++ b/styl/page.styl
@@ -22,7 +22,7 @@
 	border-radius 0 !important
 	text-align center
 
-.main-content, pre
+.main-content, .module .footer pre
 	background-color #f9fbfc !important
 
 .main-content
@@ -246,7 +246,7 @@ section.about, section.size
 		margin-top 4rem
 	small
 		display block
-		color color-pink
+		color text-grey
 	h6
 		font-size 1.2rem
 		font-weight 600
