--- a/styl/page.styl
+++ b/styl/page.styl
@@ -33,36 +33,40 @@
 		background linear-gradient(top right, color-blue, light-color-blue)
 		z-index 4000
 		height 2px
-	padding-top 108px
+	padding-top 60px
 	position relative
 	min-height 100%
 	width 100%
 	.page
 		font-size 1em
-		padding-bottom 110px
+		padding 50px 0 110px 0
 		margin 0 15px
 		cf()
 
 .hero
 	text-align center
-	padding 3em 0 7em 0
+	padding 4.4em 0 7em 0
 	relative top left
 	min-height 100%
 	height 100%
 	width 100%
+	background-color #fff
 	h1
-		margin-bottom -.5rem
+		margin .5rem 0 -.5rem 0
 		font-weight 800
 		font-size 4.2rem
 	h3
 		font-weight 300
 		color color-light-grey
-	.button-group
-		margin-top 1.6em
-		i
-			line-height 3rem
-		.button + .button
-			margin-left .8em
+		max-width 73%
+		display block
+		margin .4rem auto
+.button-group
+	margin-top 1.6em
+	i
+		line-height 3rem
+	.button + .button
+		margin-left .8em
 
 .icons
 	background url('../public/examples/icons.jpg') repeat
@@ -107,10 +111,11 @@
 
 section.about, section.size
 	cf()
-	padding 7em 0
+	padding 5em 0
 	position relative
 	overflow hidden
 	h3
+		font-weight 600
 		margin 0 0 0.6em 0
 	p
 		color color-light-grey
@@ -127,29 +132,18 @@ section.about, section.size
 		flex-wrap wrap
 		align-items stretch
 
-.about
-	background-color #fff
-	img
-		height 18em
-		bottom -.4em
-		pointer-events none
-		&.leftcut
-			absolute left -10em
-		&.rightcut
-			absolute right -13em
-	p
-		width 82%
-		display block
-		margin 0 auto
-	.button
-		margin-top 1.4em
-
 .size
-	.large60
-		absolute right -1em
+	.puzzles
+		absolute right -7em
+		animation puzzlebounce 4.2s infinite linear
 		img
-			height 28em
-
+			height 44em
+		&-left
+			absolute left -32em
+			animation puzzlebounce 3s infinite linear
+			img
+				height 53em
+				margin-top 52em
 .grid
 	cf()
 	padding 4em 0
@@ -159,7 +153,7 @@ section.about, section.size
 	display flex
 	flex-direction column
 	text-align center
-	margin 3.4em 0
+	margin 4.4em 0
 	padding 0 2em
 	& + .column
 		border-left 1px solid border-grey
@@ -222,6 +216,7 @@ section.about, section.size
 	margin-top 1em
 
 .installing
+	margin-top 4em
 	.explanation
 		margin-top .3em
 	.module
@@ -586,9 +581,15 @@ footer.footer
 				font-size .86rem
 
 .wrap
+	padding-bottom 2rem
 	& + footer.footer
 		position static
 		margin 0
-		& .inner
-			border 0
-			padding 2em 0
+
+@keyframes puzzlebounce
+	0%, 100%
+		margin 0
+	20%
+		margin -20px 0 0 0
+	80%
+		margin 10px 0 0 0
