--- a/styl/modules/ui.styl
+++ b/styl/modules/ui.styl
@@ -22,8 +22,8 @@ for h in (1..6)
 		font-size lookup('font-size-h' + h)
 
 ::selection
-	color black
-	background-color lighten(primary-color, 80%)
+	color #fff
+	background-color lighten(primary-color, 30%)
 
 a
 	color color-primary
