--- a/styl/modules/variables.styl
+++ b/styl/modules/variables.styl
@@ -105,6 +105,8 @@ duration-m = .18s
 duration-l = .3s
 duration-xl = .5s
 duration-xxl = .8s
+duration-xxxl = 1.2s
+
 
 //Grids
 grid-padding = 1em
