--- a/styl/page.styl
+++ b/styl/page.styl
@@ -69,7 +69,7 @@
 		margin-left .8em
 
 .icons
-	background url('../public/examples/icons.jpg') repeat
+	background url('/examples/icons.jpg') repeat
 	background-size cover
 	cf()
 	height 482px
@@ -585,6 +585,7 @@ footer.footer
 		.links
 			li a
 				font-size .86rem
+				font-weight 500
 
 .wrap
 	& + footer.footer
