--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -401,12 +401,16 @@ section.size
 			margin-bottom -1.6em
 		padding 1em 0
 		small
-			color text-lightest-grey
+			color color-light-grey
 			display block
 			margin .8em 0 0 0
 			font-weight 300
 		& + .antiScroll
 			border-top 1px solid border-grey
+	small
+		display block
+		margin-top 6.6rem
+		color color-light-grey
 .example
 	padding 1rem 0
 	&:hover
