--- a/src/styl/modules/breakpoints.styl
+++ b/src/styl/modules/breakpoints.styl
@@ -14,8 +14,8 @@
 	&xl-hide
 		+below('xl')
 			display none
-	&hd-hide
-		+below('hd')
+	&xxl-hide
+		+below('xxl')
 			display none
 	&xs-show
 		+above('xs')
@@ -32,8 +32,8 @@
 	&xl-show
 		+above('xl')
 			display block
-	&hd-show
-		+above('hd')
+	&xxl-show
+		+above('xxl')
 			display block
 	&xs-stack
 		+below('xs')
@@ -85,13 +85,13 @@
 				stack()
 				margin 0 !important
 				padding 0 !important
-	&hd-stack
-		+below('hd')
+	&xxl-stack
+		+below('xxl')
 			stack()
 			margin 0 !important
 			padding 0 !important
 		&able > *
-			+below('hd')
+			+below('xxl')
 				stack()
 				margin 0 !important
 				padding 0 !important
