--- a/src/styl/modules/mixins.styl
+++ b/src/styl/modules/mixins.styl
@@ -31,6 +31,14 @@ image-size(s)
 grid(n)
 	width percentage(n/grid-length)
 
+flexgridpadding()
+	padding 0 15px
+
+flexgrid(n)
+	flex 0 0 percentage(n/grid-length)
+	max-width percentage(n/grid-length)
+	padding 0 15px
+
 push(n)
 	margin-left percentage(n/grid-length)
 
