--- a/src/styl/modules/flex-grid.styl
+++ b/src/styl/modules/flex-grid.styl
@@ -1,17 +1,18 @@
 .row
-	margin 0 -15px
 	display flex
 	flex-wrap wrap
+	gridrowmargin()
 
 .equal
 	flex-basis 0
 	flex-grow 1
 	max-width 100%
-	padding 0 15px
+	flexgridpadding()
 
 .col
 	flex 0 0 100%
 	max-width 100%
+	flexgridpadding()
 
 for size in 'xs' 's' 'm' 'l' 'xl' 'xxl'
 	+above(size)
@@ -20,13 +21,11 @@ for size in 'xs' 's' 'm' 'l' 'xl' 'xxl'
 			flex-grow 1
 			max-width 100%
 	for len in (1..grid-length)
-		.{size}-{len}
-			flexgridpadding()
 		+above(size)
 			.{size}-{len}
 				flexgrid(len)
 			.push-{size}-{len}
-				push(len)
+				gridpush(len)
 
 .nogutter
 	padding 0
