--- a/src/styl/modules/message.styl
+++ b/src/styl/modules/message.styl
@@ -6,7 +6,8 @@
 	margin 1rem 0
 	h6
 		font-weight 700
-		margin .1rem 0 0.3rem 0
+		letter-spacing -.3px
+		margin .1rem 0
 	&.warning
 		background-color background-warning
 		border-color border-warning
