Blossom.styl structure & colors
Structure changed to replace old grid. Colors page changed to show classes of colors.

--- a/src/styl/blossom.styl
+++ b/src/styl/blossom.styl
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900')
 @import 'nib'
 @import 'jeet'
 @import 'rupture'
@@ -9,7 +9,7 @@
 @import 'modules/mixins'
 
 @import 'modules/container'
-@import 'modules/flex-grid'
+@import 'modules/grid'
 
 @import 'modules/helpers'
 @import 'modules/dropdowns'
