--- a/public/css/blossom.css
+++ b/public/css/blossom.css
@@ -3468,6 +3468,7 @@ ol.ordered li[value]:before {
   font-weight: 600;
   font-size: 1rem;
   color: #4c5767;
+  letter-spacing: -1px;
 }
 .stages .stage:last-child:before,
 .stages .stage:last-child:after {
