--- a/src/styl/modules/grid.styl
+++ b/src/styl/modules/grid.styl
@@ -1,29 +1,32 @@
-// .row
-// 	float left
-// 	clear none
-// 	margin 0 -15px
-// 	overflow hidden
-// 	width calc(100% + 30px)
-// 	cf()
-// 	&:before, &:after
-// 		display table
-// 		content ''
-// 	&:after
-// 		clear both
-//
-// .col
-// 	@extend $grid
-//
-// for size in 'xs' 's' 'm' 'l' 'xl' 'hd'
-// 	for len in (1..grid-length)
-// 		+above(size)
-// 			.{size}-{len}
-// 				grid(len)
-// 			.push-{size}-{len}
-// 				push(len)
-// 			.pull-{size}-{len}
-// 				pull(len)
-//
-// .nogutter
-// 	padding 0
-// 	margin 0
+.row
+	display flex
+	flex-wrap wrap
+	gridrowmargin()
+
+.equal
+	flex-basis 0
+	flex-grow 1
+	max-width 100%
+	flexgridpadding()
+
+.col
+	flex 0 0 100%
+	max-width 100%
+	flexgridpadding()
+
+for size in 'xs' 's' 'm' 'l' 'xl' 'xxl'
+	+above(size)
+		.{size}-equal
+			flex-basis 0
+			flex-grow 1
+			max-width 100%
+	for len in (1..grid-length)
+		+above(size)
+			.{size}-{len}
+				flexgrid(len)
+			.push-{size}-{len}
+				gridpush(len)
+
+.nogutter
+	padding 0
+	margin 0
