--- a/src/styl/modules/stages.styl
+++ b/src/styl/modules/stages.styl
@@ -42,6 +42,7 @@
 			font-weight 600
 			font-size 1rem
 			color text-grey
+			letter-spacing -1px
 		&:last-child
 			&:before, &:after
 				display none
