--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -29,7 +29,7 @@ color-black = #000
 color-primary = primary-color
 color-ash = #2F3133
 color-smoke = #DBE1EB
-color-light-grey = lighten(color-grey, 20%)
+color-light-grey = #59687b
 
 background-info = lighten(color-blue, 92%)
 background-warning = lighten(color-yellow, 92%)
