--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -474,7 +474,7 @@ section.size
 			text-align center
 			margin 0
 			color color-light-grey
-			background-color light-color-smoke
+			background-color background-lighter-grey
 			font-size .875em
 			border-radius 0
 	.circle
@@ -723,7 +723,7 @@ aside.sidebar
 			margin-top 102px
 			overflow auto
 			background-color #fff
-			padding 1.8rem 2rem
+			padding 1.2rem 1.4rem
 			border-radius border-radius-normal
 
 	h6
@@ -757,6 +757,33 @@ aside.sidebar
 	p
 		color color-light-grey
 		font-size 1.1rem
+
+.log
+	padding 0 0 0 12rem
+	position relative
+	.date
+		absolute top 2.4rem left
+		font-weight 500
+		color color-light-grey
+		font-size 1rem
+	.inner
+		border-top 1px solid border-grey
+		padding 1.6rem 0
+		h4
+			margin 0 0 .5rem 0
+		.label
+			font-size .86rem
+			vertical-align middle
+			relative top -2px
+			margin-right .6rem
+			line-height .86rem
+			letter-spacing 0
+		p
+			font-size 1rem
+			line-height 1.8rem
+			color color-light-grey
+			& + p
+				margin-top .5rem
 
 footer.footer
 	span(1/1)
