--- a/src/styl/modules/accordion.styl
+++ b/src/styl/modules/accordion.styl
@@ -31,6 +31,7 @@
 			border-top 1px solid border-grey
 			font-weight 600
 			color text-grey
+			line-height 1.4rem
 			&:first-child
 				border none
 		& > .content
