--- a/src/styl/modules/breakpoints.styl
+++ b/src/styl/modules/breakpoints.styl
@@ -18,22 +18,28 @@
 		+below('xxl')
 			display none
 	&xs-show
-		+above('xs')
+		display none
+		+below('xs')
 			display block
 	&s-show
-		+above('s')
+		display none
+		+below('s')
 			display block
 	&m-show
-		+above('m')
+		display none
+		+below('m')
 			display block
 	&l-show
-		+above('l')
+		display none
+		+below('l')
 			display block
 	&xl-show
-		+above('xl')
+		display none
+		+below('xl')
 			display block
 	&xxl-show
-		+above('xxl')
+		display none
+		+below('xxl')
 			display block
 	&xs-stack
 		+below('xs')
