--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -826,6 +826,8 @@ aside.sidebar
 			color color-light-grey
 			& + p
 				margin-top .5rem
+			& + h4
+				margin-top 2rem
 	+below('m')
 		padding 0
 		.date
