--- a/src/styl/modules/buttons.styl
+++ b/src/styl/modules/buttons.styl
@@ -6,11 +6,11 @@
   color text-button-default
   background-color background-light-grey
   outline 0
-  padding 0 1.6rem
+  padding 0 1.8em
   text-align center
   border 0
   height em-height
-  line-height em-height
+  line-height 2.7em
   font-size font-size-standard
   font-weight 500
   cursor pointer
@@ -44,18 +44,18 @@
         btn-color(clr)
         btn-background-hover(clr)
   &.labeled
-    padding 0 1.4rem 0 4rem
+    padding 0 1.8rem 0 4.2rem
     i
       absolute top left
-      width 2.6rem
+      width 2.8rem
       background-color rgba(0, 0, 0, 0.1)
       text-align center
       color #fff
       height 100%
       font-size 1rem
-      line-height 2.4rem
+      line-height em-height
     &.labeled-right
-      padding 0 4rem 0 1.4rem
+      padding 0 4.2rem 0 1.8rem
       i
         absolute top right
         left auto
