--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -1,12 +1,13 @@
 //Typography
-font-size-standard = 14px
+font-size-standard = 16px
 font-size-h1 = 3.8em
-font-size-h2 = 3em
-font-size-h3 = 2.2em
-font-size-h4 = 1.8em
+font-size-h2 = 2.4em
+font-size-h3 = 2em
+font-size-h4 = 1.6em
 font-size-h5 = 1.4em
-font-size-h6 = 1.08em
-font-family-standard = 'Roboto', 'Open Sans', sans-serif
+font-size-h6 = 1.2em
+font-size-hero = 1.2em
+font-family-standard = -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 font-family-code = 'Roboto Mono', 'Consolas', 'Monaco', 'Lucida Console', monospace
 
 //Colors
@@ -28,8 +29,9 @@ color-grey = #69798F
 color-black = #000
 color-primary = primary-color
 color-ash = #2F3133
-color-smoke = #DBE1EB
+color-smoke = #eaedf1
 color-light-grey = #59687b
+color-heading = #1c2a40
 
 background-info = lighten(color-blue, 92%)
 background-warning = lighten(color-yellow, 92%)
@@ -38,13 +40,13 @@ background-success = lighten(color-green, 92%)
 
 background-light-grey = lighten(color-smoke, 20%)
 background-lighter-grey = lighten(color-smoke, 60%)
-background-lightest-grey = lighten(color-smoke, 90%)
+background-lightest-grey = lighten(color-smoke, 75%)
 
 border-grey = background-light-grey
-border-info = darken(background-info, 24%)
-border-warning = darken(background-warning, 24%)
-border-important = darken(background-important, 14%)
-border-success = darken(background-success, 20%)
+border-info = lighten(color-blue, 10%)
+border-warning = lighten(color-yellow, 10%)
+border-important = lighten(color-red, 10%)
+border-success = lighten(color-green, 10%)
 
 text-button-primary = primary-white
 text-button-red = primary-white
@@ -80,7 +82,7 @@ border-radius-normal = 4px
 em-height = 2.8em
 
 //Page
-standard-page-width = 1224px
+standard-page-width = 1124px
 standard-page-padding = 1rem
 
 //Button size
