--- a/src/styl/modules/accordion.styl
+++ b/src/styl/modules/accordion.styl
@@ -3,6 +3,7 @@
   & > .title
     padding .7rem 0
     cursor pointer
+    line-height 1.6em
     & > i
       width 1rem
       display inline-block
