--- a/src/styl/modules/code.styl
+++ b/src/styl/modules/code.styl
@@ -1,5 +1,5 @@
 code
-  background-color lighten(background-light-grey, 55%)
+  background-color background-lightest-grey
   color color-primary
   padding .3rem .5rem
   border-radius border-radius-normal
