--- a/src/styl/modules/labels.styl
+++ b/src/styl/modules/labels.styl
@@ -1,15 +1,21 @@
 .label
   background-color background-light-grey
   color text-lighter-grey
-  padding 0.5rem .8rem
+  padding 0.5rem .86rem
   display inline-block
-  font-size .86em
+  font-size .7em
+  line-height .76em
   border-radius border-radius-normal
-  font-weight 600
+  font-weight 700
   text-transform uppercase
   overflow hidden
   &.circular
     padding .48rem
+    border-radius 50%
+    width 2.4em
+    height 2.4em
+    line-height .86em
+    text-align center
   .detail
     background-color rgba(0, 0, 0, .1)
     padding 0.48rem 0.72rem
