--- a/src/styl/modules/list.styl
+++ b/src/styl/modules/list.styl
@@ -31,6 +31,9 @@ ul.list, ol.list
     .content
       display inline-block
       vertical-align top
+    code
+      padding 0
+      background transparent
   &.spaced
     li, .item
       padding 0.4rem 0
