--- a/src/styl/modules/menus.styl
+++ b/src/styl/modules/menus.styl
@@ -43,14 +43,14 @@
   .item
     display inline-block
     position relative
-    padding .54rem 1.1rem
+    padding .65rem 1.4rem
     color text-grey
     cursor pointer
     line-height 1.4rem
     font-weight 500
     .label
-      padding 0.25rem 0.66rem
-      margin -0.25rem -0.66rem
+      padding 0.4rem 0.5rem
+      margin -0.4rem 0
       margin-left .8rem
     & + .item
       margin-left .4rem
@@ -87,7 +87,8 @@
           background-color transparent
         .label
           float right
-          margin-right .3rem
+          margin-right .4rem
+          relative top 7px
         &.active
           border 0
           &:after
