--- a/src/styl/modules/message.styl
+++ b/src/styl/modules/message.styl
@@ -1,26 +1,23 @@
 .message
-  padding 1rem 1.4rem
+  padding 1.1rem 1.8rem
   background-color #fff
-  border 1px solid border-grey
+  border 0
+  border-left 6px solid border-grey
   border-radius 4px
   margin 1rem 0
+  background-color background-lightest-grey
   h6
-    font-weight 700
-    letter-spacing -.3px
-    margin .1rem 0
+    line-height 1.2em
+    margin-bottom .2rem
   &.warning
-    background-color background-warning
     border-color border-warning
     color text-warning
   &.important
-    background-color background-important
     border-color border-important
     color text-important
   &.success
-    background-color background-success
     border-color border-success
     color text-success
   &.info
-    background-color background-info
     border-color border-info
     color text-info
