--- a/src/styl/modules/stages.styl
+++ b/src/styl/modules/stages.styl
@@ -39,10 +39,9 @@
     position relative
     .header
       display block
-      font-weight 600
+      font-weight 500
       font-size 1rem
       color text-grey
-      letter-spacing -1px
     &:last-child
       &:before, &:after
         display none
@@ -79,9 +78,11 @@
         border-left-color background-lightest-grey
     .icon
       margin-right 1.1rem
+      width 2.2rem
+      text-align center
       i
-        font-size 2.2rem
-        relative top .24rem
+        font-size 2rem
+        relative top .6rem
     .content
       flex 0 1 auto
       color color-light-grey
@@ -91,7 +92,7 @@
       color text-grey
       margin .4rem 0 0 0
     pre
-      margin .6rem 0 0 0
+      margin 1rem 0 0 0
       white-space pre-wrap
       code
         display inline-block
